<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <parent>
	<artifactId>restcomm-parent</artifactId>
	<groupId>org.restcomm</groupId>
	<version>3.0.4</version>
  </parent>

  <groupId>org.restcomm</groupId>
  <artifactId>restcomm-sbc</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>RestComm SBC</name>
  <url>http://www.restcomm.org</url>

	<developers>
		<developer>
			<id>ocarriles</id>
			<name>Oscar Andres Carriles</name>
			<email>ocarriles@eolos.la</email>
			<organization>Eolos IT Corp.</organization>
			<organizationUrl>http://www.eolos.la/</organizationUrl>
			<roles>
				<role>RestComm SBC Project Lead</role>
			</roles>
			<timezone>-3</timezone>
		</developer>
		<developer>
			<id>jean.deruelle</id>
			<name>Jean Deruelle</name>
			<email>jean.deruelle@telestax.com</email>
			<organization>TeleStax, Inc</organization>
			<organizationUrl>http://www.telestax.com/</organizationUrl>
			<roles>
				<role>SIP Servlets Project Lead</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>GNU Affero General Public License</name>
			<url>http://www.gnu.org/licenses/agpl-3.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git@github.com:RestComm/sbc.git</connection>
		<developerConnection>scm:git:git@github.com:RestComm/sbc.git</developerConnection>
		<url>https://github.com/Restcomm/sbc</url>
		<tag>HEAD</tag>
	</scm>

	
	<properties>
		<log4j.version>1.2.16</log4j.version>
		<slf4j.version>1.5.5</slf4j.version>
		<junit.version>4.12</junit.version>
		<commons-configuration.version>1.7</commons-configuration.version>
		<commons-io.version>2.4</commons-io.version>
		<javamail.version>1.4</javamail.version>
		<servletapi.version>2.5</servletapi.version>
    		<sipservletapi.version>3.1.695</sipservletapi.version>
		<servlet-api.version>7.0.50</servlet-api.version>
    		<sip-ri.version>1.2.277</sip-ri.version>
		<!--tomcat.version>6.0.35</tomcat.version -->
		<tomcat7.version>7.0.64</tomcat7.version>
		<mobicents.checkstyle.version>1.0.0.FINAL</mobicents.checkstyle.version>
		<checkstyle.plugin.version>2.9.1</checkstyle.plugin.version>
		<infinispan.version>7.2.5.Final</infinispan.version>
		
		<!-- SMPP Testing -->
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<!-- SMPP Testing -->


			<!-- Utilities -->

			<!-- Message Passing -->




			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>commons-configuration</groupId>
				<artifactId>commons-configuration</artifactId>
				<version>${commons-configuration.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>

			<dependency>
  				<groupId>org.infinispan</groupId>
  				<artifactId>infinispan-core</artifactId>
  				<version>${infinispan.version}</version>
			</dependency>



			<dependency>
				<groupId>javax.mail</groupId>
				<artifactId>mail</artifactId>
				<version>${javamail.version}</version>
			</dependency>

			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.0.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.mobicents.servlet.sip</groupId>
				<artifactId>sip-servlets-spec</artifactId>
				<version>${sipservletapi.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency> <groupId>org.apache.tomcat</groupId> 
				<artifactId>servlet-api</artifactId>
				<version>${servlet-api.version}</version> 
			</dependency>


			<!-- Testing -->

			<dependency>
				<groupId>javax.sip</groupId>
				<artifactId>jain-sip-ri</artifactId>
				<version>${sip-ri.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mobicents.servlet.sip.containers</groupId>
				<artifactId>sip-servlets-catalina-7</artifactId>
				<version>${sipservletapi.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.mobicents.servlet.sip</groupId>
				<artifactId>sip-servlets-application-router</artifactId>
				<version>${sipservletapi.version}</version>
				<scope>provided</scope>
			</dependency>



		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Testing -->

		<dependency>
			<groupId>javax.sip</groupId>
			<artifactId>jain-sip-ri</artifactId>
			<version>${sip-ri.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mobicents.servlet.sip.containers</groupId>
			<artifactId>sip-servlets-catalina-7</artifactId>
			<version>${sipservletapi.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.mobicents.servlet.sip</groupId>
			<artifactId>sip-servlets-application-router</artifactId>
			<version>${sipservletapi.version}</version>
			<scope>provided</scope>
		</dependency>



		<!--dependency> <groupId>att</groupId> <artifactId>naturalvoices</artifactId>
			<version>5.1</version> </dependency -->
	</dependencies>

	<modules>
		<module>application</module>
		<module>testsuite</module>
		<module>docs</module>
	</modules>

	<build>
		<finalName>restcomm-sbc</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<compilerArguments>
						<g/>
					</compilerArguments>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<useProjectReferences>true</useProjectReferences>
				</configuration>
			</plugin>
			<!-- When testing maven sure fire spawns a new JVM. Setting it to never fixed the issue. -->
			<!--
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<forkMode>never</forkMode>
					<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=2048m</argLine>
					<systemPropertyVariables>
						<user.name>${user.name}</user.name>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			-->
			
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<configuration>
						<argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
						<!--excludes>
							<exclude>**/ClientDialTest.java</exclude>
							<exclude>**/ClientsEndpointTest.java</exclude>
						</excludes-->
						<forkCount>1</forkCount>
						<reuseForks>false</reuseForks>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>docs</id>
			<modules>
				<module>docs</module>
			</modules>
		</profile>
		<profile>
			<id>maven-release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<configuration>
							<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
							<preparationGoals>clean install</preparationGoals>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<arguments>-Dmaven.test.skip</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>restcomm-public-repository-group</id>
			<name>Restcomm Public Maven Repository Group</name>
			<url>https://oss.sonatype.org/content/groups/public</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Maven Repository Group</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
		<!-- For 3.5 and older -->
		<repository>
			<id>prime-repo</id>
			<name>PrimeFaces Maven Repository</name>
			<url>http://repository.primefaces.org</url>
			<layout>default</layout>
		</repository>

	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>mobicents-public-repository-group</id>
			<name>Mobicens Public Maven Repository Group</name>
			<url>https://oss.sonatype.org/content/groups/public</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Maven Repository Group</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<description>A Session Border Controller</description>
</project>
